--- a/apps/front/templates/front/login.html
+++ b/apps/front/templates/front/login.html
@@ -1,18 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>login</title>
-    </head>
-    <body>
-        <h2>Connectez-vous !</h2>
-        {% if form.errors %}
-        {{ form.errors }}
-        {% endif %}
-        <form method="post">
-            {{ form.as_p }}
-            {% csrf_token %}
-            <button type="submit">Se connecter</button>
-        </form>
-    </body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+<h2>Connectez-vous !</h2>
+{% if form.errors %}
+{{ form.errors }}
+{% endif %}
+<form method="post">
+    {{ form.as_p }}
+    {% csrf_token %}
+    <button type="submit">Se connecter</button>
+</form>
+{% endblock %}
