--- a/templates/base.html
+++ b/templates/base.html
@@ -7,23 +7,24 @@
         <link rel="stylesheet" href="{% static 'style.css' %}">
     </head>
     <body>
-    <nav class="nav">
-        <div class="nav__title">
-            <h1>EpicEvents</h1>
+        <nav class="nav">
+            <div class="nav__title">
+                <h1>EpicEvents</h1>
+            </div>
+            <ul class="nav__list">
+            {% if user.is_authenticated %}
+                <li><a class ="nav__item" href="{% url 'customers' %}">Clients</a></li>
+                <li><a class ="nav__item" href="{% url 'contracts' %}">Contracts</a></li>
+                <li><a class ="nav__item" href="{% url 'events' %}">Evènements</a></li>
+    {#                <li><a class ="nav__item" href="{% url 'account' %}">Mon compte</a></li>#}
+                <li><a class ="nav__item" href="{% url 'projects' %}">Mes projets</a></li>
+                <li><a class ="nav__item" href="{% url 'logout' %}">Se Déconnecter</a></li>
+            {% endif %}
+            </ul>
+        </nav>
+        <div class="content">
+            {% block content %}
+            {% endblock %}
         </div>
-        <ul class="nav__list">
-        {% if user.is_authenticated %}
-            <li><a class ="nav__item" href="{% url 'customers' %}">Clients</a></li>
-            <li><a class ="nav__item" href="{% url 'contracts' %}">Contracts</a></li>
-            <li><a class ="nav__item" href="{% url 'events' %}">Evènements</a></li>
-{#                <li><a class ="nav__item" href="{% url 'account' %}">Mon compte</a></li>#}
-            <li><a class ="nav__item" href="{% url 'projects' %}">Mes projets</a></li>
-            <li><a class ="nav__item" href="{% url 'logout' %}">Se Déconnecter</a></li>
-        {% endif %}
-        </ul>
-    </nav>
-        {% block content %}
-
-        {% endblock %}
     </body>
 </html>
