--- a/apps/front/templates/front/customers.html
+++ b/apps/front/templates/front/customers.html
@@ -7,6 +7,7 @@
     <p>Nom : {{ client.last_name }}</p>
     <p>Société : {{ client.company }}</p>
     <p>Déja client : {{ client.existing }}</p>
+    <a href="{% url 'customer_detail' customer_id=client.id %}"><button>Détails</button></a>
 </div>
 {% endfor %}
 {% endblock %}
