frontend : list and detail view for contracts working.

--- a/apps/front/templates/front/contracts.html
+++ b/apps/front/templates/front/contracts.html
@@ -7,6 +7,7 @@
     <p>status : {{ contract.status }}</p>
     <p>Montant : {{ contract.amount }}</p>
     <p>Contact commercial : {{ contract.sale_contact.email }}</p>
+<a href="{% url 'contract_detail' cont_id=contract.id %}"><button>Détails</button></a>
 </div>
 {% endfor %}
 {% endblock %}
