frontend : list and detail view for events working.

--- a/apps/front/templates/front/customer_details.html
+++ b/apps/front/templates/front/customer_details.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<h2>{{ customer.company }}</h2>
+<h2>Détails client</h2>
 <div class="box">
     <p>Société : {{ customer.company }}</p>
     <p>Prénom : {{ customer.first_name }}</p>
@@ -9,7 +9,7 @@
     <p>Mobile : {{ customer.mobile }}</p>
     <p>Email : {{ customer.email }}</p>
     <p>Création : {{ customer.date_created }}</p>
-    <p> Dérnière modification : {{ customer_date_updated }}</p>
+    <p> Dérnière modification : {{ customer.date_updated }}</p>
     <p>Déja client : {{ customer.existing }}</p>
     <p>Contact vente : {{ customer.sale_contact.email }}</p>
 </div>
