--- a/apps/front/templates/front/contract_details.html
+++ b/apps/front/templates/front/contract_details.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
-<h2>{{ contract.company }}</h2>
+<h2>Détails contrat</h2>
 <div class="box">
+<p>Société : {{ contract.company }}</p>
     <p>Status : {{ contract.status }}</p>
     <p>Montant : {{ contract.amount }}</p>
     <p>Date de payement : {{ contract.payement_due }}</p>
