--- a/apps/front/templates/front/contract_details.html
+++ b/apps/front/templates/front/contract_details.html
@@ -2,12 +2,17 @@
 {% block content %}
 <h2>Détails contrat</h2>
 <div class="box">
-<p>Société : {{ contract.company }}</p>
+{% if error %}
+    <p>{{ error.detail }}</p>
+{% endif %}
+{% if contract %}
+    <p>Société : {{ contract.customer.company }}</p>
     <p>Status : {{ contract.status }}</p>
     <p>Montant : {{ contract.amount }}</p>
     <p>Date de payement : {{ contract.payement_due }}</p>
     <p>Création : {{ contract.date_created }}</p>
     <p> Dérnière modification : {{ contract.date_updated }}</p>
     <p>Contact vente : {{ contract.sale_contact.email }}</p>
+{% endif %}
 </div>
 {% endblock %}
