--- a/apps/front/templates/front/customers.html
+++ b/apps/front/templates/front/customers.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
 <h2>tout les clients</h2>
+{% if error %}
+    <p>{{ error.detail }}</p>
+{% endif %}
+{% if clients %}
 {% for client in clients %}
 <div class="box">
     <p>Prénom : {{ client.first_name }}</p>
@@ -10,4 +14,5 @@
     <a href="{% url 'customer_detail' customer_id=client.id %}"><button>Détails</button></a>
 </div>
 {% endfor %}
+{% endif %}
 {% endblock %}
