front : create events and contracts snippet, and the home page display user's contracts or events he/she's working on

--- a/apps/front/templates/front/contracts.html
+++ b/apps/front/templates/front/contracts.html
@@ -5,14 +5,6 @@
     <p>{{ error.detail }}</p>
 {% endif %}
 {% if contracts %}
-{% for contract in contracts %}
-<div class="box">
-    <p>Client : {{ contract.customer.company }}</p>
-    <p>status : {{ contract.status }}</p>
-    <p>Montant : {{ contract.amount }}</p>
-    <p>Contact commercial : {{ contract.sale_contact.email }}</p>
-<a href="{% url 'contract_detail' cont_id=contract.id %}"><button>Détails</button></a>
-</div>
-{% endfor %}
-{% endif %}
+{% include 'front/partials/contracts_snippet.html' %}
+    {% endif %}
 {% endblock %}
