--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
                 <li><a class ="nav__item" href="{% url 'contracts' %}">Contracts</a></li>
                 <li><a class ="nav__item" href="{% url 'events' %}">Evènements</a></li>
     {#                <li><a class ="nav__item" href="{% url 'account' %}">Mon compte</a></li>#}
-                <li><a class ="nav__item" href="{% url 'projects' %}">Mes projets</a></li>
+                <li><a class ="nav__item" href="{% url 'home' %}">Mes projets</a></li>
                 <li><a class ="nav__item" href="{% url 'logout' %}">Se Déconnecter</a></li>
             {% endif %}
             </ul>
