--- a/apps/front/templates/front/contract_details.html
+++ b/apps/front/templates/front/contract_details.html
@@ -13,6 +13,9 @@
     <p>Création : {{ contract.date_created }}</p>
     <p> Dérnière modification : {{ contract.date_updated }}</p>
     <p>Contact vente : {{ contract.sale_contact.email }}</p>
+    {% if user.id == contract.sale_contact.id and not contract.event_created %}
+    <a href="{% url 'event_create' contract_id=contract.id customer_id=contract.customer.id %}"><button>Créer un evenement</button></a>
+    {% endif %}
 {% endif %}
 </div>
 {% endblock %}
