front : user creation's working (only manager can add users)

--- a/apps/front/templates/front/users.html
+++ b/apps/front/templates/front/users.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 <h2>tout les utilisateurs</h2>
+    {% if user.role == 'manager' %}
+        <a href="{% url 'user_create' %}"><button>Nouvel utilisateur</button></a>
+    {% endif %}
 {% if error %}
     <p>{{ error.detail }}</p>
 {% endif %}
