front : add an account page to change password

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
                 <li><a class ="nav__item" href="{% url 'users' %}">Utilisateurs</a></li>
                 {% endif %}
                 <li><a class ="nav__item" href="{% url 'home' %}">Mes projets</a></li>
+                <li><a class ="nav__item" href="{% url 'account' %}">Mon compte</a></li>
                 <li><a class ="nav__item" href="{% url 'logout' %}">Se Déconnecter</a></li>
             {% endif %}
             </ul>
