front : manager can edit users

--- a/apps/front/templates/front/user_details.html
+++ b/apps/front/templates/front/user_details.html
@@ -12,6 +12,7 @@
     <p>Téléphone : {{ employee.phone }}</p>
     <p>Mobile : {{ employee.mobile }}</p>
     <p>Role : {{ employee.role }}</p>
+    <a href="{% url 'user_edit' edit_user_id=user.id %}"><button>Modifier</button></a>
 {% endif %}
 </div>
 {% endblock %}
