--- a/apps/front/templates/front/customers.html
+++ b/apps/front/templates/front/customers.html
@@ -8,14 +8,6 @@
     <p>{{ error.detail }}</p>
 {% endif %}
 {% if clients %}
-{% for client in clients %}
-<div class="box">
-    <p>Prénom : {{ client.first_name }}</p>
-    <p>Nom : {{ client.last_name }}</p>
-    <p>Société : {{ client.company }}</p>
-    <p>Déja client : {{ client.existing }}</p>
-    <a href="{% url 'customer_detail' customer_id=client.id %}"><button>Détails</button></a>
-</div>
-{% endfor %}
+{% include 'front/partials/customers_snippet.html' %}
 {% endif %}
 {% endblock %}
