--- a/apps/front/templates/front/partials/events_snippet.html
+++ b/apps/front/templates/front/partials/events_snippet.html
@@ -7,7 +7,7 @@
     <p>Note : {{ event.note }}</p>
     <a href="{% url 'event_detail' event_id=event.id %}"><button>Détails</button></a>
     {% if user.id == event.support_contact.id %}
-{#    <a href="{% url 'event_edit' event_id=event.id %}"><button>Editer</button></a>#}
+    <a href="{% url 'event_edit' edit_event_id=event.id %}"><button>Editer</button></a>
     {% endif %}
 </div>
 {% endfor %}
