--- a/apps/front/templates/front/contract_details.html
+++ b/apps/front/templates/front/contract_details.html
@@ -7,7 +7,13 @@
 {% endif %}
 {% if contract %}
     <p>Société : {{ contract.customer.company }}</p>
-    <p>Status : {{ contract.status }}</p>
+    <p>Status :
+        {% if contract.client.existing %}
+        Validé
+        {% else %}
+        En attente
+        {% endif %}
+    </p>
     <p>Montant : {{ contract.amount }}</p>
     <p>Date de payement : {{ contract.payement_due }}</p>
     <p>Création : {{ contract.date_created }}</p>
