--- a/apps/front/templates/front/event_details.html
+++ b/apps/front/templates/front/event_details.html
@@ -12,7 +12,13 @@
     <p>Création : {{ event.date_created }}</p>
     <p>Modification : {{ event.date_updated }}</p>
     <p>Contact support : {{ event.support_contact.email }}</p>
-    <p>Status : {{ event.event_status }}</p>
+    <p>Status :
+        {% if event.event_status %}
+        En cours
+        {% else %}
+        Términé
+        {% endif %}
+    </p>
     <p>Note : {{ event.note }}</p>
     <a href="{% url 'contract_detail' cont_id=event.contract.id %}"><button>Contrat</button></a>
     {% if user.id == event.support_contact.id or user.role == 'manager' %}
