--- a/apps/front/templates/front/partials/customers_snippet.html
+++ b/apps/front/templates/front/partials/customers_snippet.html
@@ -3,7 +3,13 @@
     <p>Prénom : {{ client.first_name }}</p>
     <p>Nom : {{ client.last_name }}</p>
     <p>Société : {{ client.company }}</p>
-    <p>Déja client : {{ client.existing }}</p>
+    <p>Déja client :
+        {% if client.existing %}
+        Oui
+        {% else %}
+        Non
+        {% endif %}
+    </p>
     <a href="{% url 'customer_detail' customer_id=client.id %}"><button>Détails</button></a>
 </div>
 {% endfor %}
