--- a/apps/front/templates/front/events.html
+++ b/apps/front/templates/front/events.html
@@ -4,7 +4,9 @@
 {% if error %}
     <p>{{ error.detail }}</p>
 {% endif %}
+{% include 'front/partials/pagination.html' %}
 {% if events %}
-{% include 'front/partials/events_snippet.html' %}
+{% include 'front/partials/events_snippet.html' with events=instances%}
 {% endif %}
+{% include 'front/partials/pagination.html' %}
 {% endblock %}
