front : add a search page with a JS script to choose what field to lookup. still need to code the logic of the view

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,4 +42,12 @@ body {
   margin-left: 10px;
 }
 
+.search {
+  display: flex;
+  width: 100%;
+}
+.search button {
+  margin-left: 5%;
+}
+
 /*# sourceMappingURL=style.css.map */
