--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>EpicEvents</title>
-        <link rel="stylesheet" href="{% static 'style.css' %}">
+        <link rel="stylesheet" href="{% static 'css/style.css' %}">
     </head>
     <body>
         <nav class="nav">
@@ -22,6 +22,7 @@
                 <li><a class ="nav__item" href="{% url 'my_customers' %}">Mes clients</a></li>
                 {% endif %}
                 <li><a class ="nav__item" href="{% url 'home' %}">Mes projets</a></li>
+                <li><a class ="nav__item" href="{% url 'search' %}">Recherche</a></li>
                 <li><a class ="nav__item" href="{% url 'account' %}">Mon compte</a></li>
                 <li><a class ="nav__item" href="{% url 'logout' %}">Se Déconnecter</a></li>
             {% endif %}
