--- a/apps/front/templates/front/search.html
+++ b/apps/front/templates/front/search.html
@@ -13,7 +13,7 @@
             <input type="radio" name="search_sel" id="event" value="event">
         </div>
         <div>
-            <select id="choices">
+            <select name="type" id="choices">
             </select>
         </div>
         <div class="search_input">
