--- a/apps/front/templates/front/search.html
+++ b/apps/front/templates/front/search.html
@@ -17,7 +17,7 @@
             </select>
         </div>
         <div class="search_input">
-            <input type="text" name="search_input">
+            <input type="text" id="search_input" name="search_input">
         </div>
         <div>
             <button type="submit">Recherche</button>
@@ -28,6 +28,12 @@
 {% if results %}
     {% if type == 'customer' %}
         {% include 'front/partials/customers_snippet.html' with clients=results %}
+    {% endif %}
+    {% if type == 'contract' %}
+        {% include 'front/partials/contracts_snippet.html' with contracts=results %}
+    {% endif %}
+    {% if type == 'event' %}
+        {% include 'front/partials/events_snippet.html' with events=results %}
     {% endif %}
 {% endif %}
 {% endblock %}
