--- a/apps/front/templates/front/partials/contracts_snippet.html
+++ b/apps/front/templates/front/partials/contracts_snippet.html
@@ -2,7 +2,7 @@
 <div class="box">
     <p>Client : {{ contract.customer.company }}</p>
     <p>Status :
-        {% if contract.client.existing %}
+        {% if contract.status %}
         Validé
         {% else %}
         En attente
