--- a/apps/front/templates/front/partials/events_snippet.html
+++ b/apps/front/templates/front/partials/events_snippet.html
@@ -1,9 +1,9 @@
 {% for event in events %}
 <div class="box">
-    <p>Client : {{ event.customer.company }}</p>
+    <p>Client : <a href="{% url 'customer_detail' customer_id=event.customer.id %}">{{ event.customer.company }}</a></p>
     <p>Jauge : {{ event.attendees }}</p>
     <p>Date : {{ event.event_date }}</p>
-    <p>Contact support : {{ event.support_contact.email }}</p>
+    <p>Contact support : <a href="{% url 'user_detail' user_id=event.support_contact.id %}">{{ event.support_contact.email }}</a></p>
     <p>Note : {{ event.note }}</p>
     <a href="{% url 'event_detail' event_id=event.id %}"><button>Détails</button></a>
     {% if user.id == event.support_contact.id %}
