finish styling. Project seems complete, need to clear DB and add some objects for presentation

--- a/apps/front/templates/front/search.html
+++ b/apps/front/templates/front/search.html
@@ -7,7 +7,7 @@
         <div class="search_model">
             <label for="customer">Client</label>
             <input type="radio" name="search_sel" id="customer" value="customer">
-            <label for="contract">contrat</label>
+            <label for="contract">Contrat</label>
             <input type="radio" name="search_sel" id="contract" value="contract">
             <label for="event">Evenement</label>
             <input type="radio" name="search_sel" id="event" value="event">
