--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,8 +43,16 @@ body {
 }
 
 .search {
+  margin: auto;
+  margin-bottom: 10px;
   display: flex;
-  width: 100%;
+  justify-content: space-around;
+  width: 60%;
+}
+.search .search_model {
+  width: 40%;
+  display: flex;
+  justify-content: space-between;
 }
 .search button {
   margin-left: 5%;
