--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <title>EpicEvents</title>
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
+        <link rel="shortcut icon" href="{% static 'favicon.ico' %}">
     </head>
     <body>
         <nav class="nav">
