--- a/apps/front/templates/front/user_details.html
+++ b/apps/front/templates/front/user_details.html
@@ -12,7 +12,7 @@
     <p>Téléphone : {{ employee.phone }}</p>
     <p>Mobile : {{ employee.mobile }}</p>
     <p>Role : {{ employee.role }}</p>
-    {% if user.role == 'manager' %}
+    {% if user.is_manager %}
     <a href="{% url 'user_edit' edit_user_id=user.id %}"><button>Modifier</button></a>
     <a href="{% url 'user_delete' user_id=employee.id %}"><button>Supprimer</button></a>
     {% endif %}
