--- a/apps/front/templates/front/event_details.html
+++ b/apps/front/templates/front/event_details.html
@@ -16,7 +16,7 @@
         {% if event.event_status %}
         En cours
         {% else %}
-        Términé
+        Terminé
         {% endif %}
     </p>
     <p>Note : {{ event.note }}</p>
